--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <meta name="description" content="Triple Peaks Coffeshop" />
     <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/styles.css" />
+    <link rel="shortcut icon" href="favicon.ico" />
     <title>Triple Peaks CoffeeShop</title>
   </head>
-  <body></body>
+  <body>
+    <div class="page>">
+      <header class="header"></header>
+      <section class="recipes"></section>
+      <section class="reservation"></section>
+      <section class="menu"></section>
+      <section class="about"></section>
+      <footer class="footer"></footer>
+    </div>
+  </body>
 </html>
