New update for my project

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Triple Peaks Coffeshop</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Lenin-Miranda" />
@@ -8,16 +9,24 @@
     <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/styles.css" />
     <link rel="shortcut icon" href="favicon.ico" />
-    <title>Triple Peaks CoffeeShop</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="page>">
+    <div class="page">
+      <h1>Lenin-Miranda</h1>
       <header class="header"></header>
-      <section class="recipes"></section>
-      <section class="reservation"></section>
-      <section class="menu"></section>
-      <section class="about"></section>
-      <footer class="footer"></footer>
+      <main class="content">
+        <section class="recipes"></section>
+        <section class="reservation"></section>
+        <section class="menu"></section>
+        <section class="about"></section>
+        <footer class="footer"></footer>
+      </main>
     </div>
   </body>
 </html>
