--- a/index.html
+++ b/index.html
@@ -25,12 +25,88 @@
   </head>
   <body>
     <div class="page">
-      <header class="header"></header>
+      <header class="header">
+        <nav class="nav">
+          <img
+            class="nav__logo"
+            alt="navbar-logo"
+            src="./images/logo_coffeeshop_dark.svg"
+          />
+          <ul class="nav__links">
+            <li class="nav__link"><a href="#recipes-id">Recipes</a></li>
+            <li class="nav__link">
+              <a href="#reservation-id">Book a table</a>
+            </li>
+            <li class="nav__link"><a href="#menu-id">Menu</a></li>
+            <li class="nav__link"><a href="#about-id">Contacts</a></li>
+          </ul>
+        </nav>
+        <h1 class="header__title">
+          <span class="header__span-accent">Specialty coffee</span> in the
+          Triple Peaks Library
+        </h1>
+        <p class="header__description">
+          Welcome to our study zone! we've got the coffee to energize you and
+          the cozy vibes to help you get creative.
+        </p>
+        <img
+          class="header__image"
+          alt="coffeeshop-image"
+          src="./images/inside_coffee_shop.png"
+        />
+        <div class="header__footer">
+          <div>
+            <p class="header__paragraph">Hours:</p>
+            <p class="header__paragraph">Monday - Friday (10:00 - 19:00)</p>
+
+            <p class="header__paragraph">Saturday - Sunday (11:00 - 18:00)</p>
+          </div>
+          <p class="header__paragraph">
+            200 Succes Avenue, The town of Triple Peaks
+          </p>
+        </div>
+      </header>
       <main class="content">
-        <section class="recipes"></section>
-        <section class="reservation"></section>
-        <section class="menu"></section>
-        <section class="about"></section>
+        <section class="recipes" id="recipes-id">
+          <h2 class="recipes__title">Recipes</h2>
+          <p class="recipes__subtitle">
+            Check out some recipes we've collected for your home-brewing
+            convinience:
+          </p>
+          <ul class="recipes__videos">
+            <li class="recipes__iframe">
+              <iframe
+                width="580"
+                height="315"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc"
+                title="The Ultimate AeroPress Technique (Episode #3)"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+              <p class="recipes__video-caption">
+                <span>Aeropress recipe</span> <span>~5min</span>
+              </p>
+            </li>
+            <li class="recipes__iframe">
+              <iframe
+                width="580"
+                height="315"
+                src="https://www.youtube.com/embed/st571DYYTR8"
+                title="La mejor técnica de prensa francesa"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+              <p class="recipes__video-caption">
+                <span>French press recipe</span> <span>~15min</span>
+              </p>
+            </li>
+          </ul>
+        </section>
+        <section class="reservation" id="reservation-id"></section>
+        <section class="menu" id="menu-id"></section>
+        <section class="about" id="about-id"></section>
       </main>
       <footer class="footer"></footer>
     </div>
