--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
             src="./images/logo_coffeeshop_dark.svg"
           />
           <ul class="nav__links">
-            <li class="nav__link"><a href="#recipes-id">Recipes</a></li>
-            <li class="nav__link">
-              <a href="#reservation-id">Book a table</a>
+            <li><a class="nav__link" href="#recipes-id">Recipes</a></li>
+            <li>
+              <a class="nav__link" href="#reservation-id">Book a table</a>
             </li>
-            <li class="nav__link"><a href="#menu-id">Menu</a></li>
-            <li class="nav__link"><a href="#about-id">Contacts</a></li>
+            <li><a class="nav__link" href="#menu-id">Menu</a></li>
+            <li><a class="nav__link" href="#about-id">Contacts</a></li>
           </ul>
         </nav>
         <h1 class="header__title">
@@ -74,8 +74,9 @@
             convinience:
           </p>
           <ul class="recipes__videos">
-            <li class="recipes__iframe">
+            <li>
               <iframe
+                class="recipes__iframe"
                 width="580"
                 height="315"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc"
@@ -88,8 +89,9 @@
                 <span>Aeropress recipe</span> <span>~5min</span>
               </p>
             </li>
-            <li class="recipes__iframe">
+            <li>
               <iframe
+                class="recipes__iframe"
                 width="580"
                 height="315"
                 src="https://www.youtube.com/embed/st571DYYTR8"
