--- a/index.html
+++ b/index.html
@@ -106,7 +106,60 @@
             </li>
           </ul>
         </section>
-        <section class="reservation" id="reservation-id"></section>
+        <section class="reservation" id="reservation-id">
+          <h2 class="reservation__title">Book a table</h2>
+          <form class="reservation__form form">
+            <fieldset class="form__fieldset">
+              <label class="form__label" for="name">Name*</label>
+              <input
+                type="text"
+                class="form__input"
+                placeholder="Name Surname"
+                id="name"
+                required
+              />
+              <label class="form__label" for="number">Number of guests*</label>
+              <input
+                class="form__input"
+                type="number"
+                id="number"
+                placeholder="1-8"
+                required
+              />
+              <label class="form__label" for="datetime-local"
+                >Date & time*</label
+              >
+              <input
+                class="form__input"
+                id="datetime-local"
+                type="datetime-local"
+                required
+              />
+              <label class="form__label" for="email">Your Email*</label>
+              <input
+                class="form__input"
+                id="email"
+                type="email"
+                placeholder="email@email.com"
+                required
+              />
+              <button class="form__button" type="submit">Book a table</button>
+              <label
+                class="form__label form__label_type_checkbox"
+                for="checkbox"
+              >
+                <input
+                  type="checkbox"
+                  id="checkbox"
+                  class="form__checkbox"
+                  required
+                  checked
+                />
+                I agree with the terms of use
+              </label>
+            </fieldset>
+          </form>
+        </section>
         <section class="menu" id="menu-id"></section>
         <section class="about" id="about-id"></section>
       </main>
