New update for my project

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             </ul>
           </div>
         </div>
-        <p class="footer__copyright">&copy Lenin Miranda</p>
+        <p class="footer__copyright">&copy; Lenin Miranda</p>
       </footer>
     </div>
   </body>
