--- a/index.html
+++ b/index.html
@@ -9,14 +9,10 @@
     <meta name="keywords" content="HTML, CSS" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
@@ -32,12 +28,18 @@
             src="./images/logo_coffeeshop_dark.svg"
           />
           <ul class="nav__links">
-            <li><a class="nav__link" href="#recipes-id">Recipes</a></li>
+            <li>
+              <a class="nav__link" href="#recipes-id">Recipes</a>
+            </li>
             <li>
               <a class="nav__link" href="#reservation-id">Book a table</a>
             </li>
-            <li><a class="nav__link" href="#menu-id">Menu</a></li>
-            <li><a class="nav__link" href="#about-id">Contacts</a></li>
+            <li>
+              <a class="nav__link" href="#menu-id">Menu</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#about-id">Contacts</a>
+            </li>
           </ul>
         </nav>
         <h1 class="header__title">
@@ -76,8 +78,6 @@
             <li>
               <iframe
                 class="recipes__iframe"
-                width="580"
-                height="315"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc"
                 title="The Ultimate AeroPress Technique (Episode #3)"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -91,8 +91,6 @@
             <li>
               <iframe
                 class="recipes__iframe"
-                width="580"
-                height="315"
                 src="https://www.youtube.com/embed/st571DYYTR8"
                 title="La mejor técnica de prensa francesa"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -152,7 +150,6 @@
                   id="checkbox"
                   class="form__checkbox"
                   required
-                  checked
                 />
                 I agree with the terms of use
               </label>
